Convert source images to webp extension

--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
     <!-- Main Section -->
     <main>
         <div class="error-container fade-in">
-            <img src="assets/images/error-404.jpg" alt="404 Error Illustration" class="error-image slide-in-up">
+            <img src="assets/images/error-404.webp" alt="404 Error Illustration" class="error-image slide-in-up">
             <h2 class="error-message slide-in-down">Oops! This page crumbled like a gluten-free cookie! 🍪</h2>
             <p class="error-description slide-in-up">Don't let it ruin your appetite! Find your way back with one of these links:</p>
             <ul class="redirect-links fade-in">
