--- a/celebrities.html
+++ b/celebrities.html
@@ -78,7 +78,7 @@
     <!-- Main Section -->
     <main>
         <div class="card card-light" id="celebrities-header-card">
-            <img src="assets/images/celebrities-fans.jpg" class="card-img-top slide-in-up"
+            <img src="assets/images/celebrities-fans.webp" class="card-img-top slide-in-up"
                 alt="Celebrities posing to paparazzi and walking along red carpet">
             <div class="card-body">
                 <h3 class="card-title dark-text">Celebrities and Public Figures Living Gluten-Free</h3>
@@ -112,7 +112,7 @@
                     <a href="https://en.wikipedia.org/wiki/Novak_Djokovic" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/novak-djokovic.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/novak-djokovic.webp" class="celebrity-img"
                                     alt="novak djokovic, tennis player">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Novak Djokovic</h3>
@@ -126,7 +126,7 @@
                     <a href="https://en.wikipedia.org/wiki/Beren_Saat" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/beren-saat.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/beren-saat.webp" class="celebrity-img"
                                     alt="beren saat, turkish actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Beren Saat</h3>
@@ -140,7 +140,7 @@
                     <a href="https://en.wikipedia.org/wiki/Meryem_Uzerli" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/meryem-uzerli.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/meryem-uzerli.webp" class="celebrity-img"
                                     alt="meryem uzerli, turkish actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Meryem Uzerli</h3>
@@ -154,7 +154,7 @@
                     <a href="https://en.wikipedia.org/wiki/Justin_Trudeau" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/justin-trudeau.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/justin-trudeau.webp" class="celebrity-img"
                                     alt="justin trudeau - prime minister of canada">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Justin Trudeau</h3>
@@ -168,7 +168,7 @@
                     <a href="https://en.wikipedia.org/wiki/Sonam_Kapoor" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/sonam-kapoor.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/sonam-kapoor.webp" class="celebrity-img"
                                     alt="sonam kapoor - indian actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Sonam Kapoor</h3>
@@ -182,7 +182,7 @@
                     <a href="https://en.wikipedia.org/wiki/Hend_Sabry" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/hend-sabry.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/hend-sabry.webp" class="celebrity-img"
                                     alt="hend sabry - egyptian actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Hend Sabry</h3>
@@ -196,7 +196,7 @@
                     <a href="https://en.wikipedia.org/wiki/Amal_Clooney" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/amal-clooney.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/amal-clooney.webp" class="celebrity-img"
                                     alt="amal clooney - british lawyer and human rights activis">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Amal Clooney</h3>
@@ -210,7 +210,7 @@
                     <a href="https://en.wikipedia.org/wiki/Jeb_Bush" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/jeb-bush.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/jeb-bush.webp" class="celebrity-img"
                                     alt="jeb bush - american bussiness man">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Jeb Bush</h3>
@@ -224,7 +224,7 @@
                     <a href="https://en.wikipedia.org/wiki/Victoria_Beckham" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/victoria-beckham.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/victoria-beckham.webp" class="celebrity-img"
                                     alt="victoria beckham - english fashion designer and singer">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Victoria Beckham</h3>
@@ -238,7 +238,7 @@
                     <a href="https://en.wikipedia.org/wiki/Chelsea_Clinton" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/chelsea-clinton.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/chelsea-clinton.webp" class="celebrity-img"
                                     alt="chelsea clinton - only child of former u.s. president bill clinton">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Chelsea Clinton</h3>
@@ -252,7 +252,7 @@
                     <a href="https://en.wikipedia.org/wiki/Laila_Elwi" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/laila-eloui.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/laila-eloui.webp" class="celebrity-img"
                                     alt="laila eloui - egyptian actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Laila Eloui</h3>
@@ -266,7 +266,7 @@
                     <a href="https://en.wikipedia.org/wiki/Burcu_Esmersoy" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/burcu-esmersoy.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/burcu-esmersoy.webp" class="celebrity-img"
                                     alt="burcu esmersoy - turkish actress and anchorwoman">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Burcu Esmersoy</h3>
@@ -281,7 +281,7 @@
                         class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/nurgul-yesilcay.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/nurgul-yesilcay.webp" class="celebrity-img"
                                     alt="nurgul yesilcay - turkish actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Nurgul Yesilcay</h3>
@@ -295,7 +295,7 @@
                     <a href="https://en.wikipedia.org/wiki/Shruti_Haasan" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/shruti-haasan.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/shruti-haasan.webp" class="celebrity-img"
                                     alt="shruti haasan - indian actress">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Shruti Haasan</h3>
@@ -309,7 +309,7 @@
                     <a href="https://en.wikipedia.org/wiki/Ece_Vahapo%C4%9Flu" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/ece-vahapoglu.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/ece-vahapoglu.webp" class="celebrity-img"
                                     alt="ece vahapoglu - turkish author">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Ece Vahapoglu</h3>
@@ -323,7 +323,7 @@
                     <a href="https://en.wikipedia.org/wiki/Demet_Akal%C4%B1n" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/demet-akalin.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/demet-akalin.webp" class="celebrity-img"
                                     alt="demet akalin - turkish singer">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Demet Akalin</h3>
@@ -338,7 +338,7 @@
                         target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/razan-moughrabi.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/razan-moughrabi.webp" class="celebrity-img"
                                     alt="razan moughrabi - lebanese presenter">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Razan Moughrabi</h3>
@@ -352,7 +352,7 @@
                     <a href="https://en.wikipedia.org/wiki/Jennifer_Esposito" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/jennifer-esposito.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/jennifer-esposito.webp" class="celebrity-img"
                                     alt="jennifer esposito - american actress and film writer">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Jennifer Esposito</h3>
@@ -366,7 +366,7 @@
                     <a href="https://en.wikipedia.org/wiki/Gwyneth_Paltrow" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/gwyneth-paltrow.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/gwyneth-paltrow.webp" class="celebrity-img"
                                     alt="gwyneth paltrow - american actress and businesswoman">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Gwyneth Paltrow</h3>
@@ -380,7 +380,7 @@
                     <a href="https://en.wikipedia.org/wiki/Ryan_Phillippe" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/ryan-phillippe.jpg" class="celebrity-img"
+                                <img src="assets/images/celebrities/ryan-phillippe.webp" class="celebrity-img"
                                     alt="ryan phillippe - american actor">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Ryan Phillippe</h3>
@@ -394,7 +394,7 @@
                     <a href="https://en.wikipedia.org/wiki/Shatha_Hassoun" target="_blank" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/shatha-hassoun.png" class="celebrity-img"
+                                <img src="assets/images/celebrities/shatha-hassoun.webp" class="celebrity-img"
                                     alt="shatha hassoun - iraqi singer">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Shatha Hassoun</h3>
@@ -408,7 +408,7 @@
                     <a href="404.html" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/farah.jpeg" class="celebrity-img"
+                                <img src="assets/images/celebrities/farah.webp" class="celebrity-img"
                                     alt="glutenipedia owner's daughter - the reason behind making this website">
                                 <div class="card-body">
                                     <h3 class="card-title dark-text">Farah ElSharief</h3>
