--- a/recipe.html
+++ b/recipe.html
@@ -81,7 +81,7 @@
         <div class="recipe-content" id="one">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
-                <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="card-img-top recipe-details-img"
+                <img src="assets/images/recipes/cold-cucumber-soup.webp" class="card-img-top recipe-details-img"
                     alt="Cold cucumber soup">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
@@ -150,7 +150,7 @@
         <div class="recipe-content" id="two">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Raspberry Mousse</h3>
-                <img src="assets/images/recipes/raspberry-mousse.jpeg" class="card-img-top recipe-details-img"
+                <img src="assets/images/recipes/raspberry-mousse.webp" class="card-img-top recipe-details-img"
                     alt="Raspberry mousse">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
@@ -162,7 +162,7 @@
                         <li>1 lemon, juiced</li>
                         <li>500ml whipping cream</li>
                     </ul>
-                    <img src="assets/images/recipes/raspberry-mousse-ingredients.jpg"
+                    <img src="assets/images/recipes/raspberry-mousse-ingredients.webp"
                         class="card-img-top recipe-details-img" alt="Raspberry mousse ingredients">
                     <h4 class="card-body">Preparation:</h4>
                     <ol>
@@ -207,7 +207,7 @@
         <div class="recipe-content" id="three">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Zucchini Lasagna</h3>
-                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="card-img-top recipe-details-img"
+                <img src="assets/images/recipes/zucchini-lasagna.webp" class="card-img-top recipe-details-img"
                     alt="Zucchini lasagna">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
@@ -222,7 +222,7 @@
                         <li>Cheese</li>
                         <li>Egg</li>
                     </ul>
-                    <img src="assets/images/recipes/zucchini-lasagna-ingredients.jpg"
+                    <img src="assets/images/recipes/zucchini-lasagna-ingredients.webp"
                         class="card-img-top recipe-details-img" alt="Zucchini lasagna ingredients">
                     <h4 class="card-body">Preparation:</h4>
                     <ol>
@@ -258,7 +258,7 @@
         <div class="recipe-content" id="four">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Sweet Potato Salad</h3>
-                <img src="assets/images/recipes/sweet-potato-salad.jpg" class="card-img-top recipe-details-img"
+                <img src="assets/images/recipes/sweet-potato-salad.webp" class="card-img-top recipe-details-img"
                     alt="Sweet potato salad">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
@@ -311,7 +311,7 @@
         <div class="recipe-content" id="five">
             <div class="card card-light recipes-header-card">
                 <h3 class="card-title dark-text">Korean Chicken</h3>
-                <img src="assets/images/recipes/korean-chicken.jpg" class="card-img-top recipe-details-img"
+                <img src="assets/images/recipes/korean-chicken.webp" class="card-img-top recipe-details-img"
                     alt="Korean chicken">
                 <div class="card-body">
                     <p class="card-body dark-text">Here you are the how to make this delicious recipe:</p>
@@ -328,7 +328,7 @@
                         <li>Sesame Seeds</li>
                         <li>Scallions</li>
                     </ul>
-                    <img src="assets/images/recipes/korean-chicken-ingredients.jpg"
+                    <img src="assets/images/recipes/korean-chicken-ingredients.webp"
                         class="card-img-top recipe-details-img" alt="Korean chicken ingredients">
                     <h4 class="card-body">Preparation:</h4>
                     <ol>
