--- a/recipes.html
+++ b/recipes.html
@@ -81,7 +81,7 @@
     <div class="card card-light recipes-header-card slide-in-up">
       <div class="card-body">
         <h3 class="card-title dark-text">Let's enjoy delicious recipes!</h3>
-        <img src="assets/images/recipes-book.jpg" class="card-img-top"
+        <img src="assets/images/recipes-book.webp" class="card-img-top"
           alt="Tiny female chef cooking meal using recipe in kitchen">
 
         <p class="card-body dark-text">Here you are some delicious gluten-free recipe ideas that you can try,
@@ -96,7 +96,7 @@
           <a href="recipe.html#one" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/cold-cucumber-soup.jpg" class="recipe-img" alt="cold cucumber soup">
+                <img src="assets/images/recipes/cold-cucumber-soup.webp" class="recipe-img" alt="cold cucumber soup">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Cold Cucumber Soup</h3>
                   <p> Side Dish</p>
@@ -110,7 +110,7 @@
           <a href="recipe.html#two" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/raspberry-mousse.jpeg" class="recipe-img" alt="raspberry mousse">
+                <img src="assets/images/recipes/raspberry-mousse.webp" class="recipe-img" alt="raspberry mousse">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Raspberry Mousse</h3>
                   <p>Dessert</p>
@@ -124,7 +124,7 @@
           <a href="recipe.html#three" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/zucchini-lasagna.jpg" class="recipe-img" alt="zucchini lasagna">
+                <img src="assets/images/recipes/zucchini-lasagna.webp" class="recipe-img" alt="zucchini lasagna">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Zucchini Lasagna</h3>
                   <p>Main Dish</p>
@@ -138,7 +138,7 @@
           <a href="recipe.html#four" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/sweet-potato-salad.jpg" class="recipe-img" alt="sweet potato salad">
+                <img src="assets/images/recipes/sweet-potato-salad.webp" class="recipe-img" alt="sweet potato salad">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Sweet Potato Salad</h3>
                   <p>Side Dish</p>
@@ -152,7 +152,7 @@
           <a href="recipe.html#five" class="recipe-link">
             <div class="p-3 recipe-card-container">
               <div class="card card-light recipe-card">
-                <img src="assets/images/recipes/korean-chicken.jpg" class="recipe-img" alt="korean chicken">
+                <img src="assets/images/recipes/korean-chicken.webp" class="recipe-img" alt="korean chicken">
                 <div class="card-body">
                   <h3 class="card-title dark-text">Korean Chicken</h3>
                   <p>Main Dish</p>
