--- a/subscription-confirmation.html
+++ b/subscription-confirmation.html
@@ -80,7 +80,7 @@
   <main>
     <!-- Show success image and message to inform the user that subscription is done -->
     <div class="confirmation-container fade-in">
-      <img src="assets/images/subsctiption-done.jpg" alt="Subscription done successfully"
+      <img src="assets/images/subsctiption-done.webp" alt="Subscription done successfully"
         class="confirmation-image slide-in-up">
       <h2 class="confirmation-message slide-in-down">Congratulations! You successfully subscribed to our newletter!</h2>
       <p class="confirmation-description slide-in-up">We will redirect you to Home page within few seconds.</p>
