Convert landing page  images to webp extension

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <!-- Main Section -->
   <main>
     <!-- Home page background image -->
-    <img src="assets/images/family-gathering-to-eat.jpg"  id="home-page-bg-img" alt="family eating together">
+    <img src="assets/images/family-gathering-to-eat.webp"  id="home-page-bg-img" alt="family eating together">
 
     <!-- Use bootstrap grid -->
     <div class="container text-center">
@@ -89,7 +89,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div">
           <a href="diagnose.html" target="_blank">
             <div>
-              <img src="assets/images/gluten-samples.jpg" class="lp-div-img" alt="some gluten samples including bread and toast">
+              <img src="assets/images/gluten-samples.webp" class="lp-div-img" alt="some gluten samples including bread and toast">
             </div>
           </a>
         </div>
@@ -119,7 +119,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div lp-div-img-vertical">
           <a href="diagnose.html" target="_blank">
             <div>
-              <img src="assets/images/symptoms-1.jpg" class="lp-div-img" alt="girl suffering from headache and abdominal pain">
+              <img src="assets/images/symptoms-1.webp" class="lp-div-img" alt="girl suffering from headache and abdominal pain">
             </div>
           </a>
         </div>
@@ -146,7 +146,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div lp-div-img-horizontal">
           <a href="diagnose.html" target="_blank">
             <div>
-              <img src="assets/images/symptoms-1.jpg" class="lp-div-img" alt="girl suffering from headache and abdominal pain">
+              <img src="assets/images/symptoms-1.webp" class="lp-div-img" alt="girl suffering from headache and abdominal pain">
             </div>
           </a>
         </div>
@@ -155,7 +155,7 @@
         <div class="col-sm-12 col-md-12 col-lg-6 landing-page-div">
           <a href="recipes.html" target="_blank">
             <div>
-              <img src="assets/images/having-dinner-on-table.jpg" class="lp-div-img" alt="girl and boy having dinner together on the table">
+              <img src="assets/images/having-dinner-on-table.webp" class="lp-div-img" alt="girl and boy having dinner together on the table">
             </div>
           </a>
         </div>
@@ -179,39 +179,39 @@
     <div id="slideshow">
       <div class="slide-wrapper">
         <div class="slide">
-          <img src="assets/images/brands/schar-logo.jpg" alt="schar gluten free products" class="slideshow-img">
+          <img src="assets/images/brands/schar-logo.webp" alt="schar gluten free products" class="slideshow-img">
         </div>
 
         <div class="slide">
-          <img src="assets/images/brands/yoplait-logo.jpg" alt="yoplait gluten free products" class="slideshow-img">
+          <img src="assets/images/brands/yoplait-logo.webp" alt="yoplait gluten free products" class="slideshow-img">
         </div>
 
         <div class="slide">
-          <img src="assets/images/brands/free-from-tesco-brand.jpg" alt="tesco products under name 'free from'" class="slideshow-img">
+          <img src="assets/images/brands/free-from-tesco-brand.webp" alt="tesco products under name 'free from'" class="slideshow-img">
         </div>
 
         <div class="slide">
-          <img src="assets/images/brands/promise-logo.png" alt="promise gluten free products" class="slideshow-img">
+          <img src="assets/images/brands/promise-logo.webp" alt="promise gluten free products" class="slideshow-img">
         </div>
 
         <div class="slide">
-          <img src="assets/images/brands/red-mill-logo.jpg" alt="red mil gluten free products" class="slideshow-img">
+          <img src="assets/images/brands/red-mill-logo.webp" alt="red mil gluten free products" class="slideshow-img">
         </div>
 
         <div class="slide">
-          <img src="assets/images/brands/livegfree_logo.jpg" alt="live g free gluten free products" class="slideshow-img">
+          <img src="assets/images/brands/livegfree_logo.webp" alt="live g free gluten free products" class="slideshow-img">
         </div>
 
         <div class="slide">
-          <img src="assets/images/brands/nairns-logo.png" alt="narins gluten free products" class="slideshow-img">
+          <img src="assets/images/brands/nairns-logo.webp" alt="narins gluten free products" class="slideshow-img">
         </div>
 
         <div class="slide">
-          <img src="assets/images/brands/nakd-logo.jpg" alt="nakd gluten free products" class="slideshow-img">
+          <img src="assets/images/brands/nakd-logo.webp" alt="nakd gluten free products" class="slideshow-img">
         </div>
 
         <div class="slide">
-          <img src="assets/images/brands/barilla-logo.jpg" alt="barilla gluten free products" class="slideshow-img">
+          <img src="assets/images/brands/barilla-logo.webp" alt="barilla gluten free products" class="slideshow-img">
         </div>
       </div>
     </div>
